# mrg-random

./: .gitignore  CHANGELOG.md  README.md  mrg-random.cabal
src/System/Random/: MRG.hs  MRG32k3a.hs  MRG63k3a.hs
src/System/Random/MRG/: Internal.hs
src/System/Random/MRG32k3a/: Internal.hs  Stateful.hs
src/System/Random/MRG63k3a/: Internal.hs  Stateful.hs
