name:                mrg-random
version:             0.1.0.0
synopsis:            Pseudo Random Number Generator with MRG (Multiple Recursive Generator)
description:
   This package contains pure haskell implementation of some
   MRG (Multiple Recursive Generator) pseudo random number generators.
   .
   MRG PRNGs(@MRG32k3a@, @MRG63k3a@) have good features as following.
   .
     * Long period (MRG32k3a: \(\approx 2^{191}\), MRG63k3a: \(\approx 2^{377}\)).
   .
     * Generate high quality random nubers following U(0,1).
   .
     * Small state vector (6 elements of @Double@ / @Int64@).
   .
     * Able to extract substream at small cost.

homepage:            https://github.com/naohaq/mrg-random
license:             BSD3
license-file:        LICENSE
author:              Naoyuki MORITA
maintainer:          naoyuki.morita@gmail.com
copyright:           2020 Naoyuki Morita
category:            Math, Random
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10

library
  exposed-modules: System.Random.MRG32k3a
                 , System.Random.MRG32k3a.Stateful
                 , System.Random.MRG63k3a
                 , System.Random.MRG63k3a.Stateful
  other-modules: System.Random.MRG.Internal
               , System.Random.MRG32k3a.Internal
               , System.Random.MRG63k3a.Internal
  -- other-extensions:
  build-depends: base >=4.12 && <4.13
               , primitive >= 0.6
               , vector >= 0.7
               , random >= 1.2
  hs-source-dirs:      src
  ghc-options: -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/naohaq/mrg-random

